# mixlab

./: .gitignore  Build-Frontend.ps1  Build-Project.ps1  Cargo.toml  Makefile  README.md  build-frontend.sh  frontend-exec.sh  rustfmt.toml
codec/: Cargo.toml
codec/src/: ffmpeg.rs  lib.rs  ogg.rs
codec/src/aac/: adts.rs  config.rs  mod.rs
codec/src/avc/: bitstream.rs  dcr.rs  decode.rs  encode.rs  mod.rs  nal.rs  sps.rs
codec/src/ffmpeg/: codec.rs  format.rs  frame.rs  ioctx.rs  media.rs  packet.rs  pixfmt.rs  scale.rs
fieldwise/: Cargo.toml
fieldwise/examples/: simple.rs
fieldwise/src/: lib.rs  main.rs
fieldwise_derive/: Cargo.toml
fieldwise_derive/src/: lib.rs
fixtures/module/eq_three/: chronos-eq.f32.raw  chronos.f32.raw
frontend/: Cargo.toml  build.sh
frontend/src/: lib.rs  library.rs  session.rs  sidebar.rs  util.rs  workspace.rs
frontend/src/component/: drag_target.rs  midi_target.rs  mod.rs  pure_module.rs  scroll_target.rs
frontend/src/control/: fader.rs  mod.rs  rotary.rs
frontend/src/module/: amplifier.rs  clock.rs  envelope.rs  eq_three.rs  fm_sine.rs  gate.rs  icecast_input.rs  media_source.rs  mixer.rs  mixer_4ch.rs  mod.rs  monitor.rs  oscillator.rs  output_device.rs  plotter.rs  shader.rs  sine_generator.rs  stream_input.rs  stream_output.rs  trigger.rs  video_mixer.rs
frontend/src/service/: midi.rs  mod.rs
frontend/src/util/: notify.rs
frontend/src/workspace/components/: mod.rs  plotter.rs
frontend/static/: index.html  style.css
graphics/: Cargo.toml  frag.glsl  vert.glsl
graphics/src/: compile.rs  lib.rs
models/: Cargo.toml
models/src/: lib.rs
mux/: Cargo.toml
mux/src/: mp4.rs
protocol/: Cargo.toml
protocol/src/: lib.rs
src/: audio.rs  engine.rs  listen.rs  main.rs  project.rs  server.rs  source.rs  throttle.rs  time.rs  util.rs  video.rs  vst.rs
src/codec/: aac.rs  mod.rs  ogg.rs
src/codec/aac/: config.rs
src/codec/avc/: bitstream.rs  dcr.rs  mod.rs  nal.rs  sps.rs
src/db/: migrations.rs  mod.rs
src/db/migrations/: 0_init.sql  20200804_create_media_tables.sql  20200805_create_workspace_table.sql
src/engine/: io.rs  module.rs  persist.rs  save.rs  timing.rs  workspace.rs
src/icecast/: http.rs  mod.rs  registry.rs
src/module/: amplifier.rs  clock.rs  envelope.rs  eq_three.rs  fft.rs  fm_sine.rs  gate.rs  icecast_input.rs  keyboard_gate.rs  media_source.rs  mixer.rs  mixer_2ch.rs  mixer_4ch.rs  mod.rs  monitor.rs  oscillator.rs  output_device.rs  plotter.rs  shader.rs  sine_generator.rs  stereo_panner.rs  stereo_splitter.rs  stream_input.rs  stream_output.rs  trigger.rs  ts_dump.rs  video_mixer.rs  vst.rs
src/mux/: mod.rs  mp4.rs
src/project/: media.rs  stream.rs
src/rtmp/: adts.rs  client.rs  decode.rs  incoming.rs  mod.rs  packet.rs
src/video/: encode.rs
util/: Cargo.toml
util/src/: time.rs
