[package]
name = "mixlab"
version = "0.0.0"
authors = ["Charlie Somerville <charlie@charlie.bz>"]
edition = "2018"

[dependencies]
bincode = "1.2"
byteorder = "1.3"
bytes = "0.5"
derive_more = "0.99"
env_logger = "0.7"
fdk-aac = "0.2"
futures = "0.3"
http = "0.2"
httparse = "1.3"
hyper = "0.13"
lazy_static = "1.4"
lewton = "0.10"
mixlab-protocol = { path = "protocol" }
mpeg2ts = "0.1"
num-rational = "0.2"
ogg = "0.7"
ringbuf = "0.2"
tokio = { version = "0.2", features = ["macros", "process"] }
warp = "0.2"
uuid = { version = "0.8", features = ["v4"] }

# we rely on changes made in cpal master since release of 0.11.0:
cpal = { git = "https://github.com/rustaudio/cpal", rev = "f3e7c462055004d0841cbb78d3f43585af3e8567" }

# we rely on changes made in rml_rtmp master since release of 0.3.0:
rml_rtmp = { git = "https://github.com/KallDrexx/rust-media-libs", rev = "eb7f41d8cfda5b3a13372c983e737d527de413ad" }

# we rely on changes not yet merged into mse_fmp4 upstream:
# https://github.com/sile/mse_fmp4/pull/5
mse_fmp4 = { git = "https://github.com/charliesome/mse_fmp4", rev = "24a92c24f16a2ea350edf4b4be78c84bad647165" }
# mse_fmp4 = { path = "../mse_fmp4" }
