[package]
name = "mixlab"
version = "0.0.0"
authors = ["Charlie Somerville <charlie@charlie.bz>"]
edition = "2018"

[dependencies]
mixlab-codec = { path = "codec" }
mixlab-mux = { path = "mux" }
mixlab-protocol = { path = "protocol" }

bincode = "1.2"
byteorder = "1.3"
bytes = "0.5"
derive_more = "0.99"
env_logger = "0.7"
fdk-aac = "0.4"
futures = "0.3"
http = "0.2"
httparse = "1.3"
hyper = "0.13"
lazy_static = "1.4"
mpeg2ts = "0.1"
num-rational = "0.2"
ringbuf = "0.2"
serde = "1.0"
structopt = "0.3"
tokio = { version = "0.2", features = ["macros", "process", "rt-threaded", "dns", "tcp", "stream"] }
url = "2.1"
uuid = { version = "0.8", features = ["v4"] }
warp = "0.2"

# we rely on changes made in cpal master since release of 0.11.0:
cpal = { git = "https://github.com/rustaudio/cpal", rev = "f3e7c462055004d0841cbb78d3f43585af3e8567" }

# we rely on changes made in rml_rtmp master since release of 0.3.0:
rml_rtmp = { git = "https://github.com/KallDrexx/rust-media-libs", rev = "eb7f41d8cfda5b3a13372c983e737d527de413ad" }

# https://github.com/imager-io/ffmpeg-dev-rs/pull/7
ffmpeg-dev = { git = "https://github.com/charliesome/ffmpeg-dev-rs", rev = "1f315aa21d85a7111bf3f3101e7fe7c5bf22f6f1", features = ["gpl", "x264"] }

[patch."https://github.com/charliesome/ffmpeg-dev-rs"]
# https://github.com/imager-io/x264-dev/pull/1
x264-dev = { git = "https://github.com/charliesome/x264-dev", rev = "ae4ae4ee9b8f0119a678160338824344205655bb" }
