[package]
name = "mixlab"
version = "0.0.0"
authors = ["Charlie Somerville <charlie@charlie.bz>"]
edition = "2018"

[dependencies]
mixlab-codec = { path = "codec" }
mixlab-mux = { path = "mux" }
mixlab-protocol = { path = "protocol" }
mixlab-util = { path = "util" }

bincode = "1.2"
byteorder = "1.3"
bytes = "0.5"
cpal = "0.12"
derive_more = "0.99"
env_logger = "0.7"
fdk-aac = "0.4"
futures = "0.3"
http = "0.2"
httparse = "1.3"
hyper = "0.13"
itertools = "0.9"
lazy_static = "1.4"
mpeg2ts = "0.1"
num-rational = "0.2"
packed_simd = "0.3"
percent-encoding = "2.1"
ringbuf = "0.2"
rusqlite = { version = "0.23" }
serde = "1.0"
serde_json = "1.0"
structopt = "0.3"
tokio = { version = "0.2", features = ["macros", "process", "rt-threaded", "dns", "tcp", "stream"] }
url = "2.1"
uuid = { version = "0.8", features = ["v4"] }
warp = "0.2"

# we rely on changes made in rml_rtmp master since release of 0.3.0:
rml_rtmp = { git = "https://github.com/KallDrexx/rust-media-libs", rev = "eb7f41d8cfda5b3a13372c983e737d527de413ad" }

# https://github.com/imager-io/ffmpeg-dev-rs/pull/7
ffmpeg-dev = { git = "https://github.com/charliesome/ffmpeg-dev-rs", rev = "a9bdafb368ec8a049232f91efaf7560c9dd035fb", features = ["gpl", "x264"] }
