[package]
name = "mixlab-codec"
version = "0.0.0"
authors = ["Hailey Somerville <hailey@hailey.lol>"]
edition = "2018"

[dependencies]
bytes = { version = "0.5", features = ["serde"] }
derive_more = "0.99"
futures = "0.3"
lewton = "0.10"
num-rational = "*"
ogg = "0.7"
serde = "1.0"
serde_derive = "1.0"

mixlab-util = { path = "../util" }

# see main Cargo.toml
ffmpeg-dev = { git = "https://github.com/haileysome/ffmpeg-dev-rs", rev = "372167ae60f1d6c4dad636031ba5ce248b64ed24", features = ["gpl", "x264"] }
