[package]
name = "frontend"
version = "0.0.0"
authors = ["Charlie Somerville <charlie@charlie.bz>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
bincode = "1.2"
gloo-events = "0.1"
mixlab-protocol = { path = "../protocol" }
wasm-bindgen = "0.2"
yew = { version = "0.14", features = ["web_sys"] }

web-sys = { version = "0.3", features = [
    "CanvasRenderingContext2d",
    "CssStyleDeclaration",
    "HtmlCanvasElement",
    "InputEvent",
    "WheelEvent",
    "WebSocket",
    ] }

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.1", optional = true }
plotters = "0.2.12"
itertools = "0.9.0"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
